<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListProductsRecycler">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:text="@string/listProduct"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcListProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line_"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="200dp"
        android:contentDescription="@string/description_spinner"
        android:minHeight="48dp">

    </Spinner>



    <EditText
        android:id="@+id/txt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-170dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/spinnerCategory"
        android:hint="@string/search_txt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line_"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/txt_search"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblIdProduct"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="Id"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/lblNameProduct"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="Nombre"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/lblDescProduct"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="Barrio"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/lblDiscountProduct"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="Comida"
            android:textStyle="bold"></TextView>


    </LinearLayout>


</RelativeLayout>